--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   </head>
   <body>
     <h1>Sales Chrome Extension</h1>
+    <input type="text" class="inputEl" />
+    <button class="inputBtn">SAVE INPUT</button>
   </body>
 </html>
