create ul list and grab it from the DOM

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Sales Chrome Extension</h1>
     <input type="text" class="inputEl" />
     <button class="inputBtn">SAVE INPUT</button>
+    <ul class="ulEl"></ul>
   </body>
 </html>
